# codementor-devprojects

001-simple-web-contact-form/: Cargo.toml
001-simple-web-contact-form/frontend/: Cargo.toml  Makefile.toml
001-simple-web-contact-form/frontend/src/: app.rs  lib.rs
001-simple-web-contact-form/frontend/src/components/: display.rs  form.rs  mod.rs
001-simple-web-contact-form/frontend/src/routes/: home.rs  mod.rs
001-simple-web-contact-form/frontend/static/: index.html
001-simple-web-contact-form/src/: main.rs
