[package]
name = "simple-web-contact-form"
version = "0.1.0"
authors = ["nicholaschiasson <nicholasomerchiasson@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[workspace]
members = [
	"frontend"
]

[dependencies]
actix-files = "0.4.0"
actix-rt = "1.1.1"
actix-web = { version = "3.1.0", features = ["rustls"] }
env_logger = "0.7.1"
frontend = { path = "./frontend" }
rustls = "0.18.1"
