[package]
name = "frontend"
version = "0.1.0"
authors = ["nicholaschiasson <nicholasomerchiasson@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
log = "0.4.0"
wasm-bindgen = "0.2.68"
wasm-logger = "0.2.0"
wee_alloc = "0.4.5"
web-sys = { version = "0.3", features = ["HtmlInputElement"] }
yew = "0.17.4"
yew-router = { version = "0.14.0", features = ["web_sys"] }
